# koala-cache

./: .gitignore  Cargo.toml  Dioxus.toml  README.md  pubspec.yaml
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
assets/: tailwind.css
img/: background.xcf  logo.xcf  splash.xcf
lib/: main.dart
lib/config/: consts.dart
lib/screens/documents/: documents_screen.dart
lib/screens/images/: image_detail_screen.dart  image_item.dart  images_screen.dart
lib/screens/images/widgets/: delete_confirmation_dialog.dart  empty_images_view.dart  error_view.dart  full_image_screen.dart  image_grid.dart  image_grid_item.dart  image_info_dialog.dart  images_app_bar.dart  zoomable_image_viewer.dart
lib/screens/settings/: image_paths_screen.dart  settings_screen.dart
lib/screens/settings/image_paths/: image_paths_screen.dart
lib/screens/widgets/: snackbar.dart
lib/services/: data_store.dart  http_client.dart  image_cache_service.dart  permissions_service.dart  secure_data_store.dart  sync_files.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
src/: main.rs
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
xbackend/: .gitignore  Cargo.toml  README.md  db.sql  docker-compose.yml
xbackend/src/: main.rs
xbackend/src/db/: images.rs  init.rs  mod.rs  users.rs
xbackend/src/img/: exif.rs  hash.rs  mod.rs  upload.rs
xbackend/src/routes/: auth.rs  image.rs  init.rs  mod.rs  upload.rs
xbackend/src/types/: mod.rs  types.rs
(+5 files in other folders)
