[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
dotenv = "0.15"
kamadak-exif = "0.6"
blake3 = "1.5"
jsonwebtoken = { version = "10", features = ["aws_lc_rs"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono"] }
serde = { version = "1.0", features = ["derive"] }
argon2 = "0.5"
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"